[gd_scene load_steps=5 format=3 uid="uid://dngytsjlmkfg7"]

[ext_resource type="Script" uid="uid://dpbmowgfmnxe5" path="res://addons/gaea/editor/panel.gd" id="1_afcqa"]
[ext_resource type="Script" uid="uid://bedt1m4gyyvyv" path="res://addons/gaea/editor/graph_edit.gd" id="2_cdav6"]
[ext_resource type="Script" uid="uid://coi2pynbl5ehe" path="res://addons/gaea/editor/create_node_tree.gd" id="2_vpeaa"]
[ext_resource type="Script" uid="uid://bybvolyg1u0v4" path="res://addons/gaea/editor/node_popup.gd" id="4_vtsfx"]

[node name="Gaea" type="Control"]
custom_minimum_size = Vector2(0, 256)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_afcqa")

[node name="NoData" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NoDataLabel" type="Label" parent="NoData"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -11.5
offset_right = 230.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "No data resource has been added to the selected generator"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NewDataButton" type="Button" parent="NoData"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = 15.5
offset_right = 44.0
offset_bottom = 46.5
grow_horizontal = 2
grow_vertical = 2
text = "Add New Resource"

[node name="Editor" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Editor"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Editor/VBoxContainer"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="Editor/VBoxContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Save data."

[node name="LoadButton" type="Button" parent="Editor/VBoxContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Load data."

[node name="ReloadNodeTreeButton" type="Button" parent="Editor/VBoxContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Reload create node list."

[node name="GenerateButton" type="Button" parent="Editor/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "Generate"

[node name="GraphEdit" type="GraphEdit" parent="Editor/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
scroll_offset = Vector2(0, -4)
right_disconnects = true
script = ExtResource("2_cdav6")

[node name="CreateNodePopup" type="PopupPanel" parent="Editor"]
unique_name_in_owner = true
title = "Create Node"
position = Vector2i(0, 36)
size = Vector2i(256, 384)
unresizable = false
borderless = false
extend_to_title = true
keep_title_visible = true

[node name="Margin" type="MarginContainer" parent="Editor/CreateNodePopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 252.0
offset_bottom = 380.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBox" type="VBoxContainer" parent="Editor/CreateNodePopup/Margin"]
layout_mode = 2

[node name="SearchBar" type="LineEdit" parent="Editor/CreateNodePopup/Margin/VBox"]
layout_mode = 2
placeholder_text = "Search"
clear_button_enabled = true

[node name="Tree" type="Tree" parent="Editor/CreateNodePopup/Margin/VBox" node_paths=PackedStringArray("description_label")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
hide_root = true
script = ExtResource("2_vpeaa")
description_label = NodePath("../PanelContainer/DescriptionLabel")

[node name="Label" type="Label" parent="Editor/CreateNodePopup/Margin/VBox"]
layout_mode = 2
text = "Description"

[node name="PanelContainer" type="PanelContainer" parent="Editor/CreateNodePopup/Margin/VBox"]
layout_mode = 2

[node name="DescriptionLabel" type="RichTextLabel" parent="Editor/CreateNodePopup/Margin/VBox/PanelContainer"]
custom_minimum_size = Vector2(0, 96)
layout_mode = 2
bbcode_enabled = true
text = "Description of the selected node goes here"
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Editor/CreateNodePopup/Margin/VBox"]
layout_mode = 2
size_flags_vertical = 0

[node name="CancelButton" type="Button" parent="Editor/CreateNodePopup/Margin/VBox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="CreateButton" type="Button" parent="Editor/CreateNodePopup/Margin/VBox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Create"

[node name="NodePopup" type="PopupMenu" parent="Editor" node_paths=PackedStringArray("graph_edit")]
unique_name_in_owner = true
size = Vector2i(100, 124)
item_count = 6
item_0/text = "Add Node"
item_0/id = 0
item_1/id = 1
item_1/separator = true
item_2/text = "Delete"
item_2/id = 2
item_3/id = 9999
item_3/separator = true
item_4/text = "Rename"
item_4/id = 3
item_4/disabled = true
item_5/text = "Set Color"
item_5/id = 5
script = ExtResource("4_vtsfx")
graph_edit = NodePath("../VBoxContainer/GraphEdit")

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.tres,*.res;Resources")

[connection signal="pressed" from="NoData/NewDataButton" to="." method="_on_new_data_button_pressed"]
[connection signal="pressed" from="Editor/VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="Editor/VBoxContainer/HBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="Editor/VBoxContainer/HBoxContainer/ReloadNodeTreeButton" to="." method="_on_reload_node_tree_button_pressed"]
[connection signal="pressed" from="Editor/VBoxContainer/HBoxContainer/GenerateButton" to="." method="_on_generate_button_pressed"]
[connection signal="connection_request" from="Editor/VBoxContainer/GraphEdit" to="Editor/VBoxContainer/GraphEdit" method="_on_connection_request"]
[connection signal="connection_to_empty" from="Editor/VBoxContainer/GraphEdit" to="." method="_on_graph_edit_connection_to_empty"]
[connection signal="delete_nodes_request" from="Editor/VBoxContainer/GraphEdit" to="Editor/VBoxContainer/GraphEdit" method="_on_delete_nodes_request"]
[connection signal="disconnection_request" from="Editor/VBoxContainer/GraphEdit" to="Editor/VBoxContainer/GraphEdit" method="_on_disconnection_request"]
[connection signal="end_node_move" from="Editor/VBoxContainer/GraphEdit" to="." method="_save_data"]
[connection signal="graph_elements_linked_to_frame_request" from="Editor/VBoxContainer/GraphEdit" to="Editor/VBoxContainer/GraphEdit" method="_on_graph_elements_linked_to_frame_request"]
[connection signal="gui_input" from="Editor/VBoxContainer/GraphEdit" to="." method="_on_graph_edit_gui_input"]
[connection signal="node_selected" from="Editor/VBoxContainer/GraphEdit" to="Editor/VBoxContainer/GraphEdit" method="_on_node_selected"]
[connection signal="request_connection_update" from="Editor/VBoxContainer/GraphEdit" to="." method="update_connections"]
[connection signal="request_save" from="Editor/VBoxContainer/GraphEdit" to="." method="_save_data"]
[connection signal="text_changed" from="Editor/CreateNodePopup/Margin/VBox/SearchBar" to="Editor/CreateNodePopup/Margin/VBox/Tree" method="_on_search_bar_text_changed"]
[connection signal="item_activated" from="Editor/CreateNodePopup/Margin/VBox/Tree" to="Editor/CreateNodePopup/Margin/VBox/Tree" method="_on_item_activated"]
[connection signal="item_selected" from="Editor/CreateNodePopup/Margin/VBox/Tree" to="Editor/CreateNodePopup/Margin/VBox/Tree" method="_on_item_selected"]
[connection signal="node_selected_for_creation" from="Editor/CreateNodePopup/Margin/VBox/Tree" to="." method="_on_tree_node_selected_for_creation"]
[connection signal="special_node_selected_for_creation" from="Editor/CreateNodePopup/Margin/VBox/Tree" to="." method="_on_tree_special_node_selected_for_creation"]
[connection signal="pressed" from="Editor/CreateNodePopup/Margin/VBox/HBoxContainer/CancelButton" to="." method="_on_cancel_create_button_pressed"]
[connection signal="pressed" from="Editor/CreateNodePopup/Margin/VBox/HBoxContainer/CreateButton" to="Editor/CreateNodePopup/Margin/VBox/Tree" method="_on_create_button_pressed"]
[connection signal="create_node_popup_requested" from="Editor/NodePopup" to="." method="_popup_create_node_menu_at_mouse"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
